unique_in_order

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ members = [
   "tic_tac_toe_checker", # https://www.codewars.com/kata/525caa5c1bf619d28c000335
   "infix_to_postfix_converter", # https://www.codewars.com/kata/52e864d1ffb6ac25db00017f
   "range_extraction", # https://www.codewars.com/kata/51ba717bb08c1cd60f00002f
+  "unique_in_order", # https://www.codewars.com/kata/54e6533c92449cc251001667
 ]
 
