--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ members = [
   "infix_to_postfix_converter", # https://www.codewars.com/kata/52e864d1ffb6ac25db00017f
   "range_extraction", # https://www.codewars.com/kata/51ba717bb08c1cd60f00002f
   "unique_in_order", # https://www.codewars.com/kata/54e6533c92449cc251001667
+  "the_same", # https://www.codewars.com/kata/550498447451fbbd7600041c
 ]
 
